opam-version: "1.2"
maintainer: "martin@mjambon.com"
authors: ["Martin Jambon"]

homepage: "https://github.com/mjambon/biniou"
bug-reports: "https://github.com/mjambon/biniou/issues"
dev-repo: "https://github.com/mjambon/biniou.git"
license: "BSD-3-Clause"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.0"}
  "easy-format"
]

available: [ocaml-version >= "4.02.3"]